tests/tools/checker/negative/unknown_let_type.nv
fn main() : void {
    let x : Missing = 1;
    return;
}
